--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,38 @@
+@import '../components/component-css.css';
 
-header{
+/* variable */
+.mc-img img{
+    max-width: 35%;
+}
+
+a{
+    text-decoration: none;
     color: #fff;
+}
+
+i.fa-star{
+    padding: 30px; 
+  }
+/* /variable */
+
+/* header */
+header{
     background-color: #2c3e50;
 }
+/* /header */
 
-.mc-container-height{
-    height: 90px;
-}
+/* main */
 
-.mc-height-sez1{
-    height: 495px;
+.mc-bg-sez1{
     background-color: #1abc9c;
     color: #fff;
 }
 
-.debug-img{
-    height: 300px;
+.mc-color-sez2{
+    color: #333333;
+}
+.mc-padding-bm{
+    padding-bottom: 90px;
 }
 
 .mc-height-sez3{
@@ -32,6 +49,10 @@ header{
     height: 595px;
 }
 
+/*/main */
+
+/* footer */
+
 .mc-height-footer{
     height: 455px;   
 }
@@ -47,3 +68,7 @@ header{
 .mc-color-copyr{
     background-color: #2c3e50;
 }
+
+/* /footer */
+
+ 
