feat: main sezione 4

--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,10 @@ header{
     margin-bottom: 50px;
 }
 
-.mc-height-sez4{
-    height: 595px;
+.mc-color-btn{
+    background-color: #1abc9c;
 }
+
 
 /*/main */
 
