--- a/css/style.css
+++ b/css/style.css
@@ -47,17 +47,23 @@ header{
     background-color: #1abc9c;
 }
 
+.mc-padd-sez-4{
+    padding: 0 90px;
+}
+
 
 /*/main */
 
 /* footer */
 
-.mc-height-footer{
-    height: 455px;   
-}
+
 
 .mc-color-foot{
     background-color: #3a546d;
+    color: #fff;
+}
+.mc-span-bg{
+    color: #1abc9c;
 }
 
 .mc-height-copyr{
@@ -68,6 +74,9 @@ header{
     background-color: #2c3e50;
 }
 
+.mc-pad-foot{
+    padding: 0 28px;
+}
+
 /* /footer */
 
- 
